--- a/index.html
+++ b/index.html
@@ -2154,7 +2154,7 @@
             </li>
         </ul>
         <p class="copyright">
-            © ArtCoin, 2016   All rights reserved.
+            © ArtCoin   All rights reserved.
         </p>
     </footer>
 
